...
            "state" : "translated",
            "value" : "健身"
          }
        }
      }
    },
    "catalog.health" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Healthy habits"
...
            "state" : "translated",
            "value" : "%@个香草冰淇凌"
          }
        }
      }
    },
    "entry.actions" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Record actions"
...
            "state" : "translated",
            "value" : "图片生成或保存失败，请重试。"
          }
        }
      }
    },
    "entry.viewCard" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "View card"
...
    "history.emptySubtitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No records yet. Time to check in!"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "还没有记录，去打卡吧～"
...
    },
    "profile.premium" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Premium"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "高级版"
...
            "state" : "translated",
            "value" : "给个好评"
          }
        }
      }
    },
    "profile.settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Personal settings"
...
            "state" : "translated",
            "value" : "每周第一天"
          }
        }
      }
    },
    "settings.language" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Language"
...
